[gd_scene load_steps=23 format=3 uid="uid://blu4b0wwwitd"]

[ext_resource type="Script" path="res://Scenes/Server.gd" id="1_byusv"]
[ext_resource type="Texture2D" uid="uid://bbe810fjj7ua" path="res://addons/kenney_particle_pack/circle_05.png" id="2_a5pvi"]
[ext_resource type="Script" path="res://Scenes/HUD.gd" id="2_s8kwj"]
[ext_resource type="Script" path="res://Scripts/Deadzone.gd" id="3_g50w5"]
[ext_resource type="Texture2D" uid="uid://c6cxdg7n0i613" path="res://addons/kenney_prototype_textures/dark/texture_09.png" id="4_py8nw"]
[ext_resource type="Texture2D" uid="uid://chpirswlufyr4" path="res://addons/kenney_prototype_textures/orange/texture_10.png" id="5_hdv30"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cmmef"]
bg_color = Color(0.137255, 0.180392, 0.121569, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_on2d8"]
bg_color = Color(0.219608, 0.439216, 0.2, 1)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_f4sra"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_2qciu"]
sky_material = SubResource("ProceduralSkyMaterial_f4sra")

[sub_resource type="Environment" id="Environment_14hlh"]
background_mode = 2
sky = SubResource("Sky_2qciu")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_uxfem"]
data = PackedVector3Array(50, 0, 50, -50, 0, 50, 50, 0, -50, -50, 0, 50, -50, 0, -50, 50, 0, -50)

[sub_resource type="BoxMesh" id="BoxMesh_yy7u6"]
size = Vector3(50, 1, 50)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vpofc"]
albedo_texture = ExtResource("4_py8nw")
uv1_triplanar = true
grow_amount = -0.36

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_ut0be"]
data = PackedVector3Array(-25, 0.5, 25, 25, 0.5, 25, -25, -0.5, 25, 25, 0.5, 25, 25, -0.5, 25, -25, -0.5, 25, 25, 0.5, -25, -25, 0.5, -25, 25, -0.5, -25, -25, 0.5, -25, -25, -0.5, -25, 25, -0.5, -25, 25, 0.5, 25, 25, 0.5, -25, 25, -0.5, 25, 25, 0.5, -25, 25, -0.5, -25, 25, -0.5, 25, -25, 0.5, -25, -25, 0.5, 25, -25, -0.5, -25, -25, 0.5, 25, -25, -0.5, 25, -25, -0.5, -25, 25, 0.5, 25, -25, 0.5, 25, 25, 0.5, -25, -25, 0.5, 25, -25, 0.5, -25, 25, 0.5, -25, -25, -0.5, 25, 25, -0.5, 25, -25, -0.5, -25, 25, -0.5, 25, 25, -0.5, -25, -25, -0.5, -25)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uj46t"]
albedo_texture = ExtResource("5_hdv30")
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_imbd4"]
material = SubResource("StandardMaterial3D_uj46t")
size = Vector3(10, 2.5, 5)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_edx54"]
data = PackedVector3Array(-5, 1.25, 2.5, 5, 1.25, 2.5, -5, -1.25, 2.5, 5, 1.25, 2.5, 5, -1.25, 2.5, -5, -1.25, 2.5, 5, 1.25, -2.5, -5, 1.25, -2.5, 5, -1.25, -2.5, -5, 1.25, -2.5, -5, -1.25, -2.5, 5, -1.25, -2.5, 5, 1.25, 2.5, 5, 1.25, -2.5, 5, -1.25, 2.5, 5, 1.25, -2.5, 5, -1.25, -2.5, 5, -1.25, 2.5, -5, 1.25, -2.5, -5, 1.25, 2.5, -5, -1.25, -2.5, -5, 1.25, 2.5, -5, -1.25, 2.5, -5, -1.25, -2.5, 5, 1.25, 2.5, -5, 1.25, 2.5, 5, 1.25, -2.5, -5, 1.25, 2.5, -5, 1.25, -2.5, 5, 1.25, -2.5, -5, -1.25, 2.5, 5, -1.25, 2.5, -5, -1.25, -2.5, 5, -1.25, 2.5, 5, -1.25, -2.5, -5, -1.25, -2.5)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_l0shw"]
data = PackedVector3Array(-5, 1.25, 2.5, 5, 1.25, 2.5, -5, -1.25, 2.5, 5, 1.25, 2.5, 5, -1.25, 2.5, -5, -1.25, 2.5, 5, 1.25, -2.5, -5, 1.25, -2.5, 5, -1.25, -2.5, -5, 1.25, -2.5, -5, -1.25, -2.5, 5, -1.25, -2.5, 5, 1.25, 2.5, 5, 1.25, -2.5, 5, -1.25, 2.5, 5, 1.25, -2.5, 5, -1.25, -2.5, 5, -1.25, 2.5, -5, 1.25, -2.5, -5, 1.25, 2.5, -5, -1.25, -2.5, -5, 1.25, 2.5, -5, -1.25, 2.5, -5, -1.25, -2.5, 5, 1.25, 2.5, -5, 1.25, 2.5, 5, 1.25, -2.5, -5, 1.25, 2.5, -5, 1.25, -2.5, 5, 1.25, -2.5, -5, -1.25, 2.5, 5, -1.25, 2.5, -5, -1.25, -2.5, 5, -1.25, 2.5, 5, -1.25, -2.5, -5, -1.25, -2.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jav2o"]
albedo_texture = ExtResource("5_hdv30")
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_t3der"]
material = SubResource("StandardMaterial3D_jav2o")
size = Vector3(3, 1, 5)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_0h6ya"]
data = PackedVector3Array(-1.5, 0.5, 2.5, 1.5, 0.5, 2.5, -1.5, -0.5, 2.5, 1.5, 0.5, 2.5, 1.5, -0.5, 2.5, -1.5, -0.5, 2.5, 1.5, 0.5, -2.5, -1.5, 0.5, -2.5, 1.5, -0.5, -2.5, -1.5, 0.5, -2.5, -1.5, -0.5, -2.5, 1.5, -0.5, -2.5, 1.5, 0.5, 2.5, 1.5, 0.5, -2.5, 1.5, -0.5, 2.5, 1.5, 0.5, -2.5, 1.5, -0.5, -2.5, 1.5, -0.5, 2.5, -1.5, 0.5, -2.5, -1.5, 0.5, 2.5, -1.5, -0.5, -2.5, -1.5, 0.5, 2.5, -1.5, -0.5, 2.5, -1.5, -0.5, -2.5, 1.5, 0.5, 2.5, -1.5, 0.5, 2.5, 1.5, 0.5, -2.5, -1.5, 0.5, 2.5, -1.5, 0.5, -2.5, 1.5, 0.5, -2.5, -1.5, -0.5, 2.5, 1.5, -0.5, 2.5, -1.5, -0.5, -2.5, 1.5, -0.5, 2.5, 1.5, -0.5, -2.5, -1.5, -0.5, -2.5)

[node name="World" type="Node"]
script = ExtResource("1_byusv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Name" type="LineEdit" parent="CanvasLayer/MainMenu/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Name"
alignment = 1

[node name="IPAddress" type="LineEdit" parent="CanvasLayer/MainMenu/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "IP Address"
alignment = 1

[node name="JoinButton" type="Button" parent="CanvasLayer/MainMenu/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="HostButton" type="Button" parent="CanvasLayer/MainMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="HUD" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_s8kwj")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 512.0
offset_bottom = 512.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.03, 0.03)
pivot_offset = Vector2(-7.68, -7.68)
texture = ExtResource("2_a5pvi")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -52.0
offset_right = 273.0
offset_bottom = -16.0
grow_vertical = 0
theme_override_constants/separation = 8

[node name="Ammo" type="Label" parent="CanvasLayer/HUD/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "6/âˆž"

[node name="Healthbar" type="ProgressBar" parent="CanvasLayer/HUD/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_cmmef")
theme_override_styles/fill = SubResource("StyleBoxFlat_on2d8")
max_value = 5.0
value = 5.0
show_percentage = false

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_14hlh")

[node name="Environment" type="Node3D" parent="."]

[node name="Deadzone" type="Area3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -12.2173, 0)
collision_layer = 2
collision_mask = 2
script = ExtResource("3_g50w5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Deadzone"]
shape = SubResource("ConcavePolygonShape3D_uxfem")

[node name="Floor" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
mesh = SubResource("BoxMesh_yy7u6")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_vpofc")

[node name="StaticBody3D" type="StaticBody3D" parent="Environment/Floor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Floor/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_ut0be")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(0.618861, 0, 0.785501, 0, 1, 0, -0.785501, 0, 0.618861, 7.54623, 0.633528, 11.9735)
mesh = SubResource("BoxMesh_imbd4")

[node name="StaticBody3D" type="StaticBody3D" parent="Environment/MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/MeshInstance3D/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_edx54")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(0.874179, 0, -0.485603, 0, 1, 0, 0.485603, 0, 0.874179, -12.454, 0.138468, -11.026)
mesh = SubResource("BoxMesh_imbd4")

[node name="StaticBody3D" type="StaticBody3D" parent="Environment/MeshInstance3D2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/MeshInstance3D2/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_l0shw")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(0.475348, 0, -0.879798, 0, 1, 0, 0.879798, 0, 0.475348, -8.75069, -0.00419116, -7.95531)
mesh = SubResource("BoxMesh_t3der")

[node name="StaticBody3D" type="StaticBody3D" parent="Environment/MeshInstance3D3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/MeshInstance3D3/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_0h6ya")

[connection signal="pressed" from="CanvasLayer/MainMenu/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/PanelContainer/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="body_entered" from="Environment/Deadzone" to="Environment/Deadzone" method="_on_body_entered"]
